k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocbank
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"      # SSE do extrato
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: pocbank.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: api-gateway, port: { name: http } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend, port: { name: http } }
